--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '3'
 services:
   frontend:
+    restart: always
     build: ./frontend
     ports:
       - '3000:3000'
+    volumes:
+      - ./frontend/src:/app/src
+      # - /app/node_ modules # do not owerrite node_modules inside the container
+    environment:
+    # Use polling to watch for file changes in create react app
+      - CHOKIDAR_USEPOLLING=true
   api:
+    restart: always
     build: ./api
     ports:
       - '5050:5050'
+    volumes:
+      - ./api:/app
